route-by-host/03-whoami-services.yml
apiVersion: v1
kind: Service
metadata:
  name: bear
  annotations:
    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: animals
    task: bear
---
apiVersion: v1
kind: Service
metadata:
  name: moose
  annotations:
    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: animals
    task: moose
