route-by-host/04-whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: animals.kubectl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: moose
            port:
              number: 80
  - host: moose.kubectl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bear
            port:
              number: 80
